[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Ethan Walker <ethan@saorsa.ca>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
reqwest = "0.12.23"
tokio = { version ="1.47.1", features = ["macros", "rt-multi-thread"] }

[target.x86_64-apple-darwin]
rustflags= ["-C", "link-arg=-fuse-ld=lld"]
